# gsoh-discord-bot

./: .env.sample  Cargo.toml  move-list.txt  readme.md
src/: main.rs
