[package]
name = "gsoh"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
dotenvy = "0.15.7"
poise = "0.6.1"
reqwest = { version = "0.12.20", features = ["blocking", "multipart", "stream"] }
tempfile = "3.20.0"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
zip = "4.1.0"
